// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Base64 #encode gas cost of encode(<some html>) 1`] = `1605`;

exports[`Base64 #encode gas cost of encode(aLpHaBeT) 1`] = `1351`;

exports[`Base64 #encode gas cost of encode(alphabet soup) 1`] = `1848`;

exports[`Base64 #encode gas cost of encode(f) 1`] = `832`;

exports[`Base64 #encode gas cost of encode(fo) 1`] = `843`;

exports[`Base64 #encode gas cost of encode(foo) 1`] = `832`;

exports[`Base64 #encode gas cost of encode(foob) 1`] = `1086`;

exports[`Base64 #encode gas cost of encode(fooba) 1`] = `1097`;

exports[`Base64 #encode gas cost of encode(foobar) 1`] = `1086`;

exports[`Base64 #encode gas cost of encode(includes
newlines) 1`] = `2113`;

exports[`Base64 #encode gas cost of encode(test string) 1`] = `1605`;

exports[`Base64 #encode gas cost of encode(this is a test) 1`] = `1859`;

exports[`Base64 #encode gas cost of encode(this is a very long string that should cost a lot of gas to encode :)) 1`] = `6432`;

exports[`Base64 #encode gas cost of encode(😀) 1`] = `1086`;

exports[`Base64 #encode max size string (24kB) gas cost 1`] = `3931630`;
